# persistent-code-lore

./: .gitignore  Cargo.toml  LICENSE  README.md  config.env
.github/workflows/: release.yml  tagged-release.yml
src/: config.rs  extractor.rs  generator.rs  lib.rs  main.rs
tests/: integration_test.rs
