[package]
name = "persistent-code-lore"
version = "0.1.0"
edition = "2021"
authors = ["Davide Vitiello <davide_vitiello@outlook.com"]
description = "A tool to extract and consolidate chat histories from various sources"
license = "MIT"

[[bin]]
name = "chat-history-consolidator"
path = "src/main.rs"

[lib]
name = "chat_history_consolidator"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
shellexpand = "3.0"